// ============================================================================
// Auto-generated by fsm-gen (C++20 State Machine Compiler)
// Target: Compile-time Zero-Overhead FSM (C++20)
// ============================================================================

#pragma once

#include <iostream>
#include <string_view>

#include "fsm/fsm.hpp"
#include "fsm/thread_safe_fsm.hpp"

namespace net {

// Forward declaration of Context (or include your context header)
struct NetworkContext;

// ============================================================================
// States
// ============================================================================

struct Disconnected {
    static constexpr std::string_view name = "Disconnected";
    // Description: Disconnected State
};

struct Connecting {
    static constexpr std::string_view name = "Connecting";
    // Description: Connecting to Server
};

struct Connected {
    static constexpr std::string_view name = "Connected";
    // Description: Connected and Ready
};

struct Suspended {
    static constexpr std::string_view name = "Suspended";
    // Description: Connection Suspended
};

// ============================================================================
// Events
// ============================================================================

struct ConnectCmd {};

struct HandshakeOkEvent {};

struct HandshakeFailedEvent {};

struct TimeoutEvent {};

struct NetworkDegradedEvent {};

struct DisconnectCmd {};

struct ConnectionLostEvent {};

struct NetworkRestoredEvent {};

// ============================================================================
// Guards
// ============================================================================

struct HasNetworkGuard {
    [[nodiscard]] constexpr bool operator()(const auto& /*evt*/, const auto& /*state*/,
                                            const auto& /*ctx*/) const noexcept {
        // TODO: Implement guard logic for HasNetworkGuard
        return true;
    }
};

struct NoNetworkGuard {
    [[nodiscard]] constexpr bool operator()(const auto& /*evt*/, const auto& /*state*/,
                                            const auto& /*ctx*/) const noexcept {
        // TODO: Implement guard logic for NoNetworkGuard
        return true;
    }
};

// ============================================================================
// Actions
// ============================================================================

struct InitSocketAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for InitSocketAction
    }
};

struct LogErrorAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for LogErrorAction
    }
};

struct SetupSessionAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for SetupSessionAction
    }
};

struct CleanupAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for CleanupAction
    }
};

struct PauseQueueAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for PauseQueueAction
    }
};

struct CloseSocketAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for CloseSocketAction
    }
};

struct ResumeQueueAction {
    constexpr void operator()(const auto& /*evt*/, auto& /*src*/, auto& /*dst*/, auto& /*ctx*/) const {
        // TODO: Implement action logic for ResumeQueueAction
    }
};

// ============================================================================
// Transition Table (Compile-Time Fluent DSL)
// ============================================================================

using ConnectionFSMTable =
    fsm::transition_table<fsm::row<Disconnected, ConnectCmd, Connecting>::when<HasNetworkGuard>::then<InitSocketAction>,
                          fsm::row<Disconnected, ConnectCmd, Disconnected>::when<NoNetworkGuard>::then<LogErrorAction>,
                          fsm::row<Connecting, HandshakeOkEvent, Connected>::then<SetupSessionAction>,
                          fsm::row<Connecting, HandshakeFailedEvent, Disconnected>::then<CleanupAction>,
                          fsm::row<Connecting, TimeoutEvent, Disconnected>::then<CleanupAction>,
                          fsm::row<Connected, NetworkDegradedEvent, Suspended>::then<PauseQueueAction>,
                          fsm::row<Connected, DisconnectCmd, Disconnected>::then<CloseSocketAction>,
                          fsm::row<Connected, ConnectionLostEvent, Disconnected>::then<CleanupAction>,
                          fsm::row<Suspended, NetworkRestoredEvent, Connected>::then<ResumeQueueAction>,
                          fsm::row<Suspended, DisconnectCmd, Disconnected>::then<CloseSocketAction>,
                          fsm::row<Suspended, TimeoutEvent, Disconnected>::then<CleanupAction>>;

// ============================================================================
// State Machine Type Aliases
// ============================================================================

using ConnectionFSM = fsm::fsm<ConnectionFSMTable, NetworkContext, Disconnected>;
using ThreadSafeConnectionFSM = fsm::thread_safe_fsm<ConnectionFSMTable, NetworkContext, Disconnected>;

}  // namespace net
